Test Org - Speridian/src/objects/BA_ClaimDetails__c.object
<CustomObject>
    <fields>
        <fullName>Diagnosis_Code_10__c</fullName>
        <label>Diagnosis Code 10</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_AllowedAmount__c</fullName>
        <label>Allowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_BilledAmount__c</fullName>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_COBAmount__c</fullName>
        <label>COB Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_CheckNumber__c</fullName>
        <label>Check Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ClaimLine__c</fullName>
        <label>Claim Line</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_CoInsuranceAmount__c</fullName>
        <label>Co-Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_CoPaymentAmount__c</fullName>
        <label>Co-Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_DeducitbleAmount__c</fullName>
        <label>Deducitble Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_DeniedAmount__c</fullName>
        <label>Denied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_DiagCode1__c</fullName>
        <label>Diagnosis Code 1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DiagCode2__c</fullName>
        <label>Diagnosis Code 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DiagCode3__c</fullName>
        <label>Diagnosis Code 3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DiagDescription10__c</fullName>
        <label>Diagnosis Code Description 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DiagDescription1__c</fullName>
        <label>Diagnosis Code Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DiagDescription2__c</fullName>
        <label>Diagnosis Code Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_MemberResp__c</fullName>
        <label>Member Responsibility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_Modifier_1__c</fullName>
        <label>Modifier 1</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Modifier_2__c</fullName>
        <label>Modifier 2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_NonCoveredAmount__c</fullName>
        <label>Non-Covered Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_PaidAmount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_PaidDate__c</fullName>
        <label>Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_PaidTo__c</fullName>
        <label>Paid To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_PenaltyAmount__c</fullName>
        <label>Penalty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_PlaceOfService__c</fullName>
        <label>Place of Service</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_PrepaidAmount__c</fullName>
        <label>Prepaid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_ProviderLiability__c</fullName>
        <label>Provider Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ba_RevenueCode__c</fullName>
        <label>Revenue Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_RevenueDescription__c</fullName>
        <label>Revenue Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ServiceCode__c</fullName>
        <label>Service Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ServiceDescription__c</fullName>
        <label>Service Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_VendorNumber__c</fullName>
        <label>Vendor Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_WithholdAmount__c</fullName>
        <label>Withhold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Claim Details</label>
    <nameField>
        <displayFormat>CID-{0000}</displayFormat>
        <label>Claim Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>